# shipbob-sdk-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yml  upload-to-pypi.yml
contributing/: cla.txt
shipbob/: __init__.py  client.py  enums.py  models.py
shipbob/models/: __init__.py  base.py  inventory.py  orders.py  products.py  shipping.py
